# BeyondU-data

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  alembic.ini  coverage.xml  implementation_plan.md  pyproject.toml  requirements.txt  test_cleaner_debug.py  walkthrough.md
.claude/: settings.local.json
.github/: naming-convention.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: ci.yml  claude-issue-comment.yml  claude-issue.yml  claude-pr.yml  demigrate.yml  full_reset_migration.yml  migrate.yml  validate-naming-conventions.yml
alembic/: env.py
alembic/versions/: 001_restructure_language_scores.py  002_restructure_universities.py  c5c4393c88e3_initial_schema_with_bigint_pks.py  e56fde3c6997_drop_thumbnail_url_and_available_.py
data/: test_beyondu.db
rule/: language_requirement_rule.md
scripts/: __init__.py  analyze_headers.py  check_db_count.py  check_db_values.py  debug_db_connect.py  export_csv.py  fix_lint.py  inspect_data_content.py  inspect_excel_headers.py  manage_db.py  read_log.py  run_etl.py  sync_to_s3.py  test_etl_local.py  test_etl_mysql.py  test_gpa.py  test_gpa_281.py  test_gpa_transform.py  verify_badge.py  verify_badge_save.py  verify_db.py  verify_dele.py  verify_nanjing.py  verify_review_save.py  view_db.py
src/: __init__.py  config.py
src/extract/: __init__.py  excel_reader.py
tests/: __init__.py  conftest.py  reproduce_review_parser.py  test_excel_reader_mapping.py  test_exclusion_parsing.py  test_extract.py  test_language_parser.py  test_transform.py
(+11 files in other folders)
